--- a/exemplo2_ingressos/index.html
+++ b/exemplo2_ingressos/index.html
@@ -4,23 +4,58 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Página inicial VIO</title>
-    <link rel="stylesheet" href="styles.css"/> 
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <header>
-        <div class="logo">
-            <img src="ingresso1.png" alt="Logo do site">
-            <h1>Ingressos Fácil</h1>
-        </div>
-        <p>Compre seus ingressos com facilidade</p>
-        <nav>
-            <ul>
-                <li><a href="#home">Inicio</a></li>
-                <li><a href="#eventos">Eventos</a></li>
-                <li><a href="#sobrenos">Sobre nós</a></li>
-                <li><a href="#contato">Contato</a></li>
-            </ul>
-        </nav>
+      <div class="logo">
+        <img src="ingresso1.png" alt="Logo do site" />
+        <h1>Ingressos Fácil</h1>
+      </div>
+      <p>Compre seus ingressos com facilidade</p>
+      <nav>
+        <ul>
+          <li><a href="#home">Inicio</a></li>
+          <li><a href="#eventos">Eventos</a></li>
+          <li><a href="#sobre">Sobre nós</a></li>
+          <li><a href="#contato">Contato</a></li>
+        </ul>
+      </nav>
     </header>
+    <main>
+      <section id="home">
+        <h2>Bem-Vindo(a) ao IngressosFacil</h2>
+        <p>
+          Aqui você encontra ingressos para os melhores eventos da sua cidade
+        </p>
+      </section>
+
+      <section id="eventos">
+        <h2>Proximos Eventos</h2>
+        <div class="eventos-container">
+          <div class="eventos-item">
+            <h3>Show de Rock</h3>
+            <p>Data: 25 de setembro de 2025</p>
+          </div>
+
+          <div class="eventos-item">
+            <h3>Teatro: A comedia da Vida</h3>
+            <p>Data: 30 de outubro de 2025</p>
+          </div>
+        </div>
+      </section>
+
+      <section id="sobre">
+        <h2>Sobre Nós</h2>
+        <p>
+          Somos uma empresa dedicada a facilitar a compra de ingressos para
+          eventos culturais e esportivos
+        </p>
+      </section>
+    </main>
+
+    <footer class="rodape">
+      <p>&copy; 2024 IngressosFacil - Todos os direitos reservados</p>
+    </footer>
   </body>
 </html>
